--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <span id="minutes">00</span> :
             <span id="seconds">00</span>
             <span id="period">AM</span>
+            <span id=""period">PM</span>s
         </div>
 
     </div>
